# quicdoq

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  quicdoq.sln
.github/workflows/: ci-asan-ubsan.yml  codeql-analysis.yml  test-suite.yml
ci/: build_picotls.sh
cmake/: FindPicoquic.cmake
docker/: Dockerfile  README.md
quicdoq/: quicdoq.c  quicdoq.h  quicdoq.vcxproj  quicdoq.vcxproj.filters  quicdoq_internal.h  quicdoq_util.c  udp_relay.c
quicdoq_cli_app/: quicdoq_app.c  quicdoq_cli_app.vcxproj  quicdoq_cli_app.vcxproj.filters
quicdoq_cli_test/: quicdoq_cli_test.vcxproj  quicdoq_cli_test.vcxproj.filters  quicdoq_t.c
quicdoq_test/: dnscode_test.c  network_test.c  quicdoq_test.h  quicdoq_test.vcxproj  quicdoq_test.vcxproj.filters
quicdoq_unittest/: quicdoq_unittest.cpp  quicdoq_unittest.vcxproj  quicdoq_unittest.vcxproj.filters
